--- a/08-diplay-practice.html
+++ b/08-diplay-practice.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="lib/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <title>Dispaly Practice </title>
     <style>
         .box{
                 height: 100px;
                 width: 100px;
+        }
+        .container{
+            min-height: 500px;
+            border: 1px solid;
         }
         
     </style>
@@ -17,7 +22,7 @@
 
      <h1 class="text-center text-danger  ">Dispaly Practice</h1>
      
-     <div class="container">
+     <div class="container d-flex justify-content-center align-items-center">
          <div  class="box bg-danger d-block d-sm-none">1</div>
          <div  class="box bg-success d-none d-sm-block">2</div>
          <div  class="box bg-primary">3</div>
